<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_pengyouquan"
                style="@style/TxtTitle"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:background="@drawable/setting_item_selector"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_marginTop="20dp"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/v2"
                android:text="@string/moments" />
            <View
                android:background="@color/black2"
                android:layout_width="fill_parent"
                android:layout_height="1.0dip" />


            <TextView
                android:id="@+id/txt_saoyisao"
                style="@style/TxtTitle"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:background="@drawable/setting_item_selector"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_marginTop="20dp"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/icon_de_saoyisao"
                android:text="@string/scan" />
            <View
                android:background="@color/black2"
                android:layout_width="fill_parent"
                android:layout_height="1.0dip" />
            <TextView
                android:id="@+id/txt_yaoyiyao"
                style="@style/TxtTitle"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:background="@drawable/setting_item_selector"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/icon_de_yao"
                android:text="@string/shake2" />
            <View
                android:background="@color/black2"
                android:layout_width="fill_parent"
                android:layout_height="1.0dip" />

            <TextView
                android:id="@+id/txt_nearby"
                style="@style/TxtTitle"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/setting_item_selector"
                android:drawableLeft="@drawable/icon_de_nearby"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/people_nearby"
                android:textSize="16sp" />

            <View
                android:background="@color/black2"
                android:layout_width="fill_parent"
                android:layout_height="1.0dip" />



            <TextView
                android:id="@+id/txt_shop"
                style="@style/TxtTitle"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:background="@drawable/setting_item_selector"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_marginTop="20dp"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/icon_de_shop"
                android:text="@string/shopping" />
            <View
                android:background="@color/black2"
                android:layout_width="fill_parent"
                android:layout_height="1.0dip" />
            <TextView
                android:id="@+id/txt_game"
                style="@style/TxtTitle"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:background="@drawable/setting_item_selector"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/icon_de_game"
                android:text="@string/games" />
            <View
                android:background="@color/black2"
                android:layout_width="fill_parent"
                android:layout_height="1.0dip" />

            <TextView
                android:id="@+id/txt_small_program"
                style="@style/TxtTitle"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:background="@drawable/setting_item_selector"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:paddingLeft="22dp"
                android:paddingRight="16dp"
                android:layout_marginTop="20dp"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/ic_icon_de_small_program"
                android:text="@string/small_program" />
            <View
                android:background="@color/black2"
                android:layout_width="fill_parent"
                android:layout_height="1.0dip" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>