<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_welcome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/welcome" />

        <TextView
            android:id="@+id/tv_choose_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:text="语言"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btn_splash_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_margin="20dp"
            android:background="@drawable/btn_bg_green"
            android:paddingBottom="10dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingTop="10dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btn_splash_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="20dp"
            android:background="@drawable/btn_bg_gray"
            android:paddingBottom="10dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingTop="10dp"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:visibility="gone"/>
    </RelativeLayout>


</LinearLayout>